--- a/basic-react/package.json
+++ b/basic-react/package.json
@@ -35,5 +35,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "yarn@3.4.1",
+  "devDependencies": {
+    "eslint-config-react-app": "^7.0.1"
+  }
 }
