--- a/basic-react/.yarnrc.yml
+++ b/basic-react/.yarnrc.yml
@@ -1,1 +1,6 @@
 yarnPath: .yarn/releases/yarn-3.4.1.cjs
+
+packageExtensions:
+  react-scripts@*:
+    peerDependencies:
+      eslint-config-react-app: "*"
