--- a/basic-react/package.json
+++ b/basic-react/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.9",
     "use-immer": "^0.8.1",
     "web-vitals": "^2.1.0"
   },
@@ -39,6 +40,7 @@
   },
   "packageManager": "yarn@3.4.1",
   "devDependencies": {
-    "eslint-config-react-app": "^7.0.1"
+    "eslint-config-react-app": "^7.0.1",
+    "tailwindcss": "^3.2.7"
   }
 }
